syntax = "proto3";

package statistics;

option go_package = "car-rental/backend/statistics-service/proto";

service StatisticsService {
    rpc GetUserOrderStatistics (UserOrderStatisticsRequest) returns (UserOrderStatisticsResponse);
    rpc GetUserStatistics (UserStatisticsRequest) returns (UserStatisticsResponse);
}

message UserOrderStatisticsRequest {
    string user_id = 1;
}

message UserOrderStatisticsResponse {
    int32 total_orders = 1;
    string most_active_time = 2;
}

message UserStatisticsRequest {
    string user_id = 1;
}

message UserStatisticsResponse {
    int32 total_users = 1;
    int32 active_users = 2;
}